--- a/PasswordGenerator/PasswordGenerator.csproj
+++ b/PasswordGenerator/PasswordGenerator.csproj
@@ -4,6 +4,7 @@
         <AssemblyVersion>0.0.1</AssemblyVersion>
         <OutputType>Exe</OutputType>
         <TargetFramework>net5.0</TargetFramework>
+        <AssemblyName>pgt</AssemblyName>
     </PropertyGroup>
 
     <ItemGroup>
